--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "http-server -p 8080 -c-1"
+    "start": "http-server -p 8080 -c-1 --cors"
   },
   "repository": {
     "type": "git",
